compiler.old/tests/compiler/must_fail/t_04.rs.exp.err
tests/compiler/must_fail/t_04.rs:3:11: 3:12 error: parse error
        _x[i] : inline! (b1);
          ^^
