compiler.old/tests/compiler/must_fail/t_04.rs
fn test() {
    var! {
        _x[i] : inline! (b1);
    }
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
